[package]
name = "multi_range_map"
description = "A range map for overlapping ranges."
license = "CC-PDM-1.0"
repository = "https://github.com/GroveDG/multi_range_map"
version = "0.1.2"
edition = "2024"

[features]
slotmap = ["dep:slotmap"]
doc = ["slotmap"]

[package.metadata.docs.rs]
all-features = true

[dependencies]
slotmap = { version = "1.1.1", optional = true }
smallvec = { version = "1.15.1", features = [
	"const_generics",
	"const_new",
	"union",
] }
